--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ donkergroen #1C2B32
         <h1 class="domain">Domein.shop</h1>
         <p class="name">Jouw domeinnaam registreren in slechts 1 minuut!</p>
         <form action="free"></form>
+<!--        het lukt mij niet om deze in het midden te krijgen-->
         <div class="under"><input type="text" placeholder="Is jouw domein nog vrij?" class="input">
             <button type="button" class="checking">Check beschikbaarheid</button>
         </div>
